trying to fix visibility

--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 * {
     box-sizing: border-box;
 }
-
+#start_button{
+    text-align: center;
+}
 #hidden1{
     display: none;
     position: relative;
